--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles.css">
-    <title>Basic Webpage</title>
+    <title>Anoushka'a Webpage</title>
 </head>
 
 <body>
     <!-- Here is a section for menu bar -->
     <div class="menu">
-        <div class="menu-item"><a href="index.html">About Me</a></div>
+        <div class="menu-item"><a href="index.html">Home</a></div>
         <div class="menu-item"><a href="#">Projects</a></div>
-        <div class="menu-item"><a href="#">Contact</a></div>
+        <div class="menu-item"><a href="#">About Me</a></div>
     </div>
     <!-- Here is a section for the content of your page -->
     <div class="content">
@@ -23,7 +24,12 @@
             is an example of a Heading. The div tags above are examples of containers
             within which each "section" of the webpage is contained.
         </p>
+        <img src="C:\Users\Anoushka\Desktop\headshot.png" width="10%">
     </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
