--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             is an example of a Heading. The div tags above are examples of containers
             within which each "section" of the webpage is contained.
         </p>
-        <img src="C:\Users\Anoushka\Desktop\headshot.png" width="10%">
+        <img src=""C:\Users\Anoushka\Desktop\website-hack-day-2025\headshot.png"" width="10%">
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
